--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Jonathanferreras/state-of-mind-questionnaire#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.18",
     "sqlite3": "^5.0.8"
